2002-05-03  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (SUBDIRS): Move man and m4 after projects and misc.
	'man' must be after 'misc' because 'misc' contains some programs.

2002-05-01  Bruno Haible  <bruno@clisp.org>

	* configure.in (AC_OUTPUT): Add misc/autopoint. Make misc/autopoint
	executable.

2002-05-01  Bruno Haible  <bruno@clisp.org>

	* INSTALL: Remove the recommendation to set CPPFLAGS and LDFLAGS.
	The lib-link.m4 macros make this unnecessary.

2002-04-28  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (gettextsrc_SCRIPTS): Add mkinstalldirs.

2002-04-24  Bruno Haible  <bruno@clisp.org>

	* gettext-0.11.2 released.

2002-04-24  Bruno Haible  <bruno@clisp.org>

	* configure.in: Bump version number to 0.11.2.
	(RELEASE_DATE): Bump.

2002-03-15  Andrew Zabolotny  <zap@cobra.ru>

	* os2/README.OS2: Update.
	* os2/Makefile: Likewise.

2002-03-12  Bruno Haible  <bruno@clisp.org>

	* gettext-0.11.1 released.

2002-03-12  Bruno Haible  <bruno@clisp.org>

	* configure.in: Bump version number to 0.11.1.
	(RELEASE_DATE): Bump.

	* Makefile.am (EXTRA_DIST): Add some more djgpp/* files.

2002-03-09  Bruno Haible  <bruno@clisp.org>

	* configure.in: Don't check for stpncpy; AIX 4.3.3 has an incompatible
	implementation of it.
	* acconfig.h (HAVE_STPNCPY): Define on glibc systems only.

2002-03-07  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (MAKEINFO): New variable.
	* missing (makeinfo): Don't call touch without arguments if the source
	texinfo file doesn't contain a @setfilename command.
	Reported by Miroslaw Dobrzanski-Neumann <mne@mosaic-ag.com>.

2002-02-15  Bruno Haible  <bruno@clisp.org>

	* djgpp/*: Update DJGPP support.
	From Juan Manuel Guerrero <st001906@hrz1.hrz.tu-darmstadt.de>.
	* configure.in (CXX): Recognize 'gpp' as an alternative name for 'g++'.

2002-02-14  Andrew Zabolotny  <zap@cobra.ru>

	* os2/README.OS2: Update.
	* os2/Makefile: Update.

2002-02-10  Bruno Haible  <bruno@clisp.org>
