@@ -87,8 +87,3 @@ following file list.
       $prefix/share/emacs/site-lisp/po-compat.elc
       $prefix/share/emacs/site-lisp/po-mode.el
       $prefix/share/emacs/site-lisp/po-mode.elc
-
-Note: Although installed by "make install", the static libraries
-      $prefix/lib/libgettextlib.a
-      $prefix/lib/libgettextsrc.a
-don't need to be included in binary distributions; they are redundant.
